--- a/_posts/2015-04-23-new-site.md
+++ b/_posts/2015-04-23-new-site.md
@@ -3,4 +3,6 @@ layout: post
 title: New Website
 ---
 
-Coming soon! Looking for [SpaDES](http://SpaDES.PredictiveEcology.org)? 
+Welcome! We are starting a new blog about predicting in ecology. There are many topics to cover as we are working through many of them currently. One of the key tools we use is simulation modeling. Please see our R package, [SpaDES](http://SpaDES.PredictiveEcology.org), for more about that. 
+
+See you soon!
