--- a/_posts/2015-04-22-new-site.md
+++ b/_posts/2015-04-22-new-site.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Is R Fast Enough - Part 1
+title: New Webpage
 ---
 
 Welcome! We are starting a new blog about predicting in ecology. There are many topics to cover as we are working through many of them currently. One of the key tools we use is simulation modeling. Please see our R package, [SpaDES](http://SpaDES.PredictiveEcology.org), for more about that. 
