--- a/_posts/2015-05-06-Is-R-fast-enough-03.Rmd
+++ b/_posts/2015-05-06-Is-R-fast-enough-03.Rmd
@@ -7,7 +7,7 @@ output:
 ---
 ---
 layout: post
-title: Is `R` Fast Enough? - Part 3 - "Fibonacci"
+title: Is R Fast Enough? - Part 3 - "Fibonacci"
 author: Eliot McIntire
 date: May 6, 2015
 tags: [R]
