add `benchmark` tag; use it populate `benchmarking` page

--- a/_posts/2015-05-12-Is-R-fast-enough-04.Rmd
+++ b/_posts/2015-05-12-Is-R-fast-enough-04.Rmd
@@ -9,7 +9,7 @@ layout: post
 title: Is `R` Fast Enough? - Part 4 - "Loops"
 author: Eliot McIntire
 date: May 12, 2015
-tags: [R]
+tags: [R, benchmark]
 comments: true
 ---
 
