fix title of last post

--- a/_posts/2015-09-01-fpCompare-0-2-1.md
+++ b/_posts/2015-09-01-fpCompare-0-2-1.md
@@ -1,6 +1,6 @@
 ---
 layout  : post
-title   : Reliable comparison of floating point numbers in R
+title   : fpCompare version 0.2.1 released
 author  : Alex Chubaty
 date    : September 1, 2015
 comments: true
