formatting fixes for R loops post
fixes post formatting in 5988f64

--- a/_posts/2015-09-04-Is-R-fast-enough-04.Rmd
+++ b/_posts/2015-09-04-Is-R-fast-enough-04.Rmd
@@ -17,11 +17,9 @@ In part 4 of this series on benchmarking `R`, we'll explore loops and a common a
 
 There are many other resources about this topic; we will try to be concise and show the worst case, the best case, and many little steps in between.
 
-
 ## Loops
 
-Loops have been the achilles heel of R in the past. In version 3.1 and forward, much of this problem appears to be gone. As could be seen in the [http://predictiveecology.org/2015/05/06/Is-R-fast-enough-03.html](Fibonacci  example), pre-allocating a vector and filling it up inside a loop can now be very fast and efficient in native R. To demonstrate these points, below are 6 ways to achieve the same result in R, beginning with a naive loop approach, and working up to the fully vectorized approach. I am using a very fast vectorized function, seq_len, to emphasize the differences between using loops and optimized vectorized functions.
-
+Loops have been the achilles heel of R in the past. In version 3.1 and forward, much of this problem appears to be gone. As could be seen in the [Fibonacci  example](http://predictiveecology.org/2015/05/06/Is-R-fast-enough-03.html), pre-allocating a vector and filling it up inside a loop can now be very fast and efficient in native R. To demonstrate these points, below are 6 ways to achieve the same result in R, beginning with a naive loop approach, and working up to the fully vectorized approach. I am using a very fast vectorized function, `seq_len`, to emphasize the differences between using loops and optimized vectorized functions.
 
 ```{r Functions, cache=FALSE, eval=TRUE, echo=FALSE, message=FALSE}
 library(Rcpp)
@@ -120,7 +118,6 @@ cpp <- {
   runifCpp(N)
 }
 
-
 ```
 
 ```{r loops, eval=TRUE, echo=TRUE}
@@ -133,66 +130,65 @@ dt = data.table(num=rep(NA_real_, N))
 
 mb = microbenchmark::microbenchmark(times=5L,
 
-                                     
-# no pre-allocating of vector length, generating uniform random numbers once, then calling them within each loop
-loopWithNoPreallocate = {
-  set.seed(104)
-  a <- numeric()
-    for (i in 1:N) {
-      a[i] = unifs[i]
-    } 
-   a
+  # no pre-allocating of vector length, generating uniform random numbers once, then calling them within each loop
+  loopWithNoPreallocate = {
+    set.seed(104)
+    a <- numeric()
+      for (i in 1:N) {
+        a[i] = unifs[i]
+      } 
+     a
   } ,
-
-# pre-allocating vector length, generating uniform random numbers once, then calling them within each loop
-loopWithPreallocate = {
+  
+  # pre-allocating vector length, generating uniform random numbers once, then calling them within each loop
+  loopWithPreallocate = {
+      set.seed(104)
+      a <- numeric(N) 
+      for (i in 1:N) {
+        a[i] = unifs[i]
+      }
+      a
+  },
+   
+  # # sapply - generally faster than loops
+  sapplyVector1 = {
+        set.seed(104)
+        sapply(unifs,function(x) x)
+  },
+  
+  # sapply with pipe operator: no intermediate objects are created
+  sapplyWithPipe = {
+        set.seed(104)
+        unifs <- (runif(N)) %>%
+          sapply(.,function(x) x)
+  },
+  
+  # use data.table set function, which can be very fast inside a loop
+  datatableSet = {
     set.seed(104)
-    a <- numeric(N) 
-    for (i in 1:N) {
-      a[i] = unifs[i]
+    for(i in 1L:N) {
+      set(dt, i, j = 1L, unifs[i])
     }
-    a
+    dt
   },
- 
-# # sapply - generally faster than loops
-sapplyVector1 = {
+  
+  # vectorized with intermediate object before return
+  vectorizedWithCopy = {
       set.seed(104)
-      sapply(unifs,function(x) x)
-      },
-
-# sapply with pipe operator: no intermediate objects are created
-sapplyWithPipe = {
-      set.seed(104)
-      unifs <- (runif(N)) %>%
-        sapply(.,function(x) x)
-      },
-
-# use data.table set function, which can be very fast inside a loop
-datatableSet = {
-  set.seed(104)
-  for(i in 1L:N) {
-    set(dt, i, j = 1L, unifs[i])
-  }
-  dt
+      unifs <- runif(N)
+      unifs
   },
-
-# vectorized with intermediate object before return
-vectorizedWithCopy = {
+  
+  # no intermediate object before return
+  vectorizedWithNoCopy = {
     set.seed(104)
-    unifs <- runif(N)
-    unifs
+    runif(N)
   },
-
-# no intermediate object before return
-vectorizedWithNoCopy = {
-  set.seed(104)
-  runif(N)
-  },
-
-cpp = {
-  set.seed(104)
-  runifCpp(N)
-}
+  
+  cpp = {
+    set.seed(104)
+    runifCpp(N)
+  }
 )
 
 print("Units: milliseconds")
@@ -230,7 +226,7 @@ We move on to higher level operations. Specifically, some GIS operations.
 
 #### See also
 
-http://gallery.rcpp.org/tags/benchmark/
+[http://gallery.rcpp.org/tags/benchmark/](http://gallery.rcpp.org/tags/benchmark/)
 
 --------------------
 
