added another point on Rook

--- a/_posts/2015-12-08-R-Web-App-Development-Deployment-Distribution.Rmd
+++ b/_posts/2015-12-08-R-Web-App-Development-Deployment-Distribution.Rmd
@@ -97,6 +97,16 @@ OpenCPU is an open source solution for embedded R computing. The software can be
 
 *Refer to [this blog post](http://www.jenunderwood.com/2015/01/12/part-1-integrating-r/) by Jen Underwood on how you can integrate R*
 
+#### Rook
+
+Rook is a lightweight web server interface for R developed by Jeffrey Horner that does not need any configuration file as Rook is a R package which works out of the box with R HTTP server.
+The idea behind this is to separate application development from server implementation. Thus, when a web server supports a web server interface, an application written to its specifications is guaranteed to run on that server.
+So then you would need to do some learning on HTTP to develop Rook applications.
+
+*Refer to [this blog post](http://www.r-bloggers.com/a-simple-web-application-using-rook/) by Ben Ogorek on a tutorial on building simple web application using Rook*
+
+*Refer to [this CRAN](https://cran.r-project.org/web/packages/Rook/README.html) for package description of Rook*
+
 ***
 
 Distribution
