--- a/_posts/2015-12-08-R-Web-App-Development-Deployment-Distribution.Rmd
+++ b/_posts/2015-12-08-R-Web-App-Development-Deployment-Distribution.Rmd
@@ -28,7 +28,7 @@ What is the process to deploy and distribute `R` web applications?
 
 While web development can be done in many different environments, [RStudio](https://www.rstudio.com/) is widely used to develop `R` applications. Below is a snapshot of what RStudio looks like.
 
-> ![Snapshot of RStudio](2015-12-08rstudio.png)
+> ![Snapshot of RStudio]({{ site.baseurl }}/img/2015-12-08rstudio.png)
 
 
 
@@ -68,7 +68,7 @@ However service is not cheap so if you have extra cash lying around, this would 
 
 **See below feature comparion chart between `Shiny Server`, `Shiny Server Pro` and `shinyapps.io` taken from this [page](https://www.rstudio.com/products/shinyapps/)**
 
-> ![Comparison Chart](2015-12-08compare.png)
+> ![Comparison Chart]({{ site.baseurl }}/img/2015-12-08compare.png)
 
 
 ### Docker
@@ -118,7 +118,7 @@ After you have 'dockerized' your `Shiny` application, you can share it on `Kitem
 This makes distributing very simple and easy as `Docker Hub` can work like `App Store`!
 Below is a snapshot of Kitematic.
 
-> ![Snapshot of Kitematic](2015-12-08kitematic.jpg)
+> ![Snapshot of Kitematic]({{ site.baseurl }}/img/2015-12-08kitematic.jpg)
 
 *Refer to [this blog post](http://www.r-bloggers.com/share-your-shiny-apps-with-docker-and-kitematic/) to learn how you can share your `Shiny` application with `Docker` and `Kitematic`*
 
