fix minor typos

--- a/_posts/2016-01-26-SpaDES-v1.1.0-now-on-CRAN.md
+++ b/_posts/2016-01-26-SpaDES-v1.1.0-now-on-CRAN.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: '`SpaDES` v1.1.0 now on CRAN'
+title: 'SpaDES v1.1.0 now on CRAN'
 date: January 26, 2016
 author: Alex Chubaty and Eliot McIntire
 tags: [R, SpaDES]
@@ -44,7 +44,7 @@ install.packages("fastshp", repos = "http://rforge.net", type = "source")
 
 **Vignettes:**
 
-Available at the wiki (https://github.com/PredictiveEcology/SpaDES/wiki/Help-Vignettes) as well as in your R session:
+Available at the [wiki](https://github.com/PredictiveEcology/SpaDES/wiki/Help-Vignettes) as well as in your R session:
 
 ```r
 browseVignettes(package="SpaDES")
