--- a/_posts/2016-07-04 How to start using a HPC cluster.Rmd
+++ b/_posts/2016-07-04 How to start using a HPC cluster.Rmd
@@ -17,13 +17,13 @@ Is your R script taking too long?  Do you find yourself rerunning things over an
 
 These instructions are for Compute Canada super computing network, and specifically, the Grex machine on the WestGrid network, but they should work with some minor modifications for any super computing cluster.
  
-# Create an account on your super computing network
+## Create an account on your super computing network
 
 For Compute Canada, that is [https://www.computecanada.ca/research-portal/account-management/apply-for-an-account/](here).
 
-# Set up your computer
+## Set up your computer 
 
-## Connect to supercomputer by command line
+Connect to supercomputer by command line.
 
 ### Windows -- need putty
 
