test why not one predictiveecology.org

--- a/_posts/2016-06-24-SpaDES-v1.2.0-now-on-CRAN.md
+++ b/_posts/2016-06-24-SpaDES-v1.2.0-now-on-CRAN.md
@@ -6,7 +6,7 @@ author: Alex Chubaty and Eliot McIntire
 tags: [R, SpaDES]
 ---
 
-> v1.2.0 is now available on [CRAN](https://cran.r-project.org/package=SpaDES)!
+> v1.2.0 is now available on [CRAN](https://cran.r-project.org/package=SpaDES).
 
 This release fixes a bug made apparent by the latest `dplyr` update, as well as several performance improvements and enhancements.
 
