--- a/_posts/2016-07-04-How-to-start-using-a-HPC-cluster.Rmd
+++ b/_posts/2016-07-04-How-to-start-using-a-HPC-cluster.Rmd
@@ -27,16 +27,16 @@ Connect to supercomputer by command line.
 
 ### Windows -- need putty
 
-Putty is the way to make the command-line connection to Westgrid.
+Putty is the software to make the command-line connection to Westgrid.
 
-1. Download putty.exe from https://the.earth.li/~sgtatham/putty/latest/x86/putty.exe
+1. Download putty.exe from [here](https://the.earth.li/~sgtatham/putty/latest/x86/putty.exe)
 2. Put putty.exe somewhere easy (like desktop or task bar). It is how you connect to Westgrid
 3. Open putty (double click)
 4. Create a new Session:
   
-  a. type `grex.westgrid.ca` in the Host Name box and in the Saved Sessions box
-  b. Select Connection - Data on left side, fill in your user name in Auto-login username near top.
-  c. Click Save
+    a. type `grex.westgrid.ca` in the Host Name box and in the Saved Sessions box
+    b. Select Connection - Data on left side, fill in your user name in Auto-login username near top.
+    c. Click Save
 
 ## Connect usnig putty or ssh
 
@@ -50,11 +50,15 @@ e. When you want to disconnect, type exit
 
 ## Linux 
 
+It is much easier on Linux because SSH is built in to most distributions. 
+
 ```{bash, eval = FALSE}
+##########
 ssh -l LOGINNAME grex.westgrid.ca # change LOGINNAME to your login name
 
 
 exit # to disconnect
+##########
 ```
 
 ## Connect to supercomputer for file transfer
@@ -75,8 +79,12 @@ Please contact your cluster administrators, or find the list of software on each
 
 ```{bash, eval = FALSE}
 
+##########
+
 module load r/3.2.2
 module load gdal/1.10.1
+
+##########
 
 ```
 
@@ -90,6 +98,7 @@ On Linux machines, ~ is your home directory and is the shorthand for /home/USERN
 Here, the use must change the lines below for their own github repository of interest. The one below is private and so will not work unless you are part of that repository user group.
 
 ```{r, eval = FALSE}
+##########
 
 # Perhaps clone the McIntire-lab repository
 mkdir -p Documents/GitHub/
@@ -100,6 +109,8 @@ git clone git@github.com:eliotmcintire/McIntire-lab.git
 cd ~/Documents/GitHub/McIntire-Lab
 git pull
 
+##########
+
 ```
 
 
@@ -108,17 +119,21 @@ git pull
 From the prompt, start R
 
 ```{bash, eval = FALSE}
+##########
 R
+##########
 ```
 
 Prepare your R for what you will need, i.e., install some packages. In the case here, we are loading a simulation package, SpaDES, which has a lot of dependencies and can take a while.
 
 ```{r, eval = FALSE}
+##########
 # From within R, install necessary packages
 install.packages("devtools") # choose HTTP #18, then #1. This is because it is an old version of R, specifically 3.2.2  If it is a newer version of R, then you can choose HTTPS
 install.packages("Rmpi")
 library(devtools)
 install_github("PredictiveEcology/SpaDES@development")
+##########
 
 ```
 
@@ -132,18 +147,31 @@ You need a submit file and an R file with your R code. See two files ending with
 McIntire-lab github repo. See example text that could be put in a submission file, here `test.pbs`
 
 ```{bash, eval = FALSE}
+##########
+
 cd Documents/GitHub/McIntire-lab/ComputeCanada/
 qsub test.pbs
+
+##########
 
 ```
 
 ## Monitoring jobs
 
+There are several commands that you can use at the command line to monitor your jobs. `qdel` will remove tham.
+
 ```{bash, eval = FALSE}
+##########
+
 # to monitor jobs
 qstat -u USERNAME # change this for your user name
 qstat -f 9963747 # change this for your job number, which can be found from previous line
 checkjob 9963747 # change this for your job number, which can be found from previous lines
+
+# delete
+qdel 9963747 # delete that job
+
+##########
 ```
 
 ## Other commands in Linux that may be useful for new-to-Linux users
@@ -151,6 +179,7 @@ checkjob 9963747 # change this for your job number, which can be found from prev
 There are many others that you can find on the westgrid web page, or widely throughout the internet, but these are certain to come in handy.
 
 ```{bash, eval = FALSE}
+##########
 # linux commands that may be useful
 ls # list the contents of a directory
 ls -l # 
@@ -160,19 +189,8 @@ cd Documents/GitHub #  change to another directory
 rm dist7* # remove all files in the current directory starting with dist7
   
 nano filename # a simple text editor
-```
-
-## Possible mechanism to get files off westgrid via FTP
-
-Because file transfer across the internet is slow, it may be worthwhile to set up an automated 
-copy mechanism at the end of a file. This means that if the program is running overnight and finishes at 2am, the copying would start right away.
-
-```{r ftp, eval = FALSE}
-
-library(RCurl)
-# You will have to set User, password and FTPserver manually (it is not what you see here)
-filename = "output.rdata"
-system.time(ftpUpload(filename, paste0("ftp://ftpUsername:ftpPassword@ftpServer",filename)))
+# CTRL-X will exit from that editor, keyboard (not mouse) can be used to do minor edits
+##########
 
 ```
 
@@ -192,6 +210,8 @@ There are a few lines that you will generally change. Going through from top to 
 
 
 ```{bash, eval = FALSE}
+##########
+
 #!/bin/bash
 #PBS -S /bin/bash
 #PBS -N Rmpi-Test2
@@ -214,6 +234,8 @@ echo "Starting run at: `date`"
 mpiexec -n 1 Rscript --vanilla ./test.R
 echo "Program test finished with exit code $? at: `date`"
 
+##########
+
 ```
 
 
@@ -231,6 +253,9 @@ Key points below, these are specific to WestGrid:
 
 
 ```{r, eval = FALSE}
+
+##########
+
 library(SpaDES)
 library(parallel)
 library(raster)
@@ -270,14 +295,39 @@ stopCluster(cl)
 # save it for accessing later
 save(outSimList, file = "outputs/outSimList.rdata")
 
+##########
 
 
 ```
+
+## Possible mechanism to get files off westgrid via FTP
+
+Because file transfer across the internet is slow, it may be worthwhile to set up an automated 
+copy mechanism at the end of a file. This means that if the program is running overnight and finishes at 2am, the copying would start right away.
+
+```{r ftp, eval = FALSE}
+##########
+
+library(RCurl)
+# You will have to set User, password and FTPserver manually (it is not what you see here)
+filename = "output.rdata"
+system.time(ftpUpload(filename, paste0("ftp://ftpUsername:ftpPassword@ftpServer",filename)))
+
+##########
+
+```
+
+
+
+### Epilogue file
 
 If you would like to see some extra information from your job, you can write this following to a file, call it epilogue.script and add it to your home directory. This will then be called from the `#PBS` line that refers to the `epilogue.script` file (above)
 
 
 ```{bash epilogue script, eval = FALSE}
+
+##########
+
 #!/bin/sh
 echo "Epilogue Args:"
 echo "Job ID: $1"
@@ -291,5 +341,7 @@ echo "Queue Name: $8"
 echo "Account String: $9"
 echo ""
 exit 0
+
+##########
 
 ```
