--- a/_posts/2016-08-09-SpaDES-workshops.Rmd
+++ b/_posts/2016-08-09-SpaDES-workshops.Rmd
@@ -10,7 +10,7 @@ title: Introduction to SpaDES Workshop
 author: Eliot McIntire, Alex Chubaty
 date: August 9, 2016
 comments: true
-tags: [SpaDES, workshop, raster, ecological modeling, ecological simulation, course]
+tags: [SpaDES, workshop, raster, ecological, modeling, simulation, course]
 ---
 
 Alex Chubaty and I will be leading 2 [introductory SpaDES workshops this fall](http://rpubs.com/PredictiveEcology/SpaDES-Intro-Outline). They will essentially be the same workshop, but one will be mid September, and the second will be in early December. 
@@ -31,3 +31,4 @@ The two workshops will be similar. We will be doing two workshops because there 
 ## [Current workshop outline](http://rpubs.com/PredictiveEcology/SpaDES-Intro-Outline)
 
 (post edited on Sept 9, 2016)
+
