change title of latest workshop post so it's unique

--- a/_posts/2016-09-09-SpaDES-workshops.Rmd
+++ b/_posts/2016-09-09-SpaDES-workshops.Rmd
@@ -6,7 +6,7 @@ output:
 ---
 ---
 layout: post
-title: Introduction to SpaDES Workshop
+title: Introduction to SpaDES Workshop Info
 author: Eliot McIntire, Alex Chubaty
 date: September 9, 2016
 comments: true
