--- a/_posts/2016-08-09-SpaDES-workshops.Rmd
+++ b/_posts/2016-08-09-SpaDES-workshops.Rmd
@@ -30,5 +30,5 @@ We will be doing two workshops because there is immediate need for some users, b
 
 **Where: Pacific Forestry Centre, Victoria, BC**
 
-## [Current workshop outline](http://rpubs.com/PredictiveEcology/SpaDES-Intro-Outline)
+[Current workshop outline](http://rpubs.com/PredictiveEcology/SpaDES-Intro-Outline)
 
