rm : from title

--- a/_posts/2016-11-17-Postdoc-Opportunity-Mixed-Severity-Fire-Rocky-Mountains.Rmd
+++ b/_posts/2016-11-17-Postdoc-Opportunity-Mixed-Severity-Fire-Rocky-Mountains.Rmd
@@ -8,7 +8,7 @@ output:
 ---
 ---
 layout: post
-title: Postdoc Opportunity: Mixed Severity Fire Modeling in the Rocky Mountain Foothills (Reposted)
+title: Postdoc Opportunity - Mixed Severity Fire Modeling in the Rocky Mountain Foothills (Reposted)
 author: Eliot McIntire
 date: November 17, 2016
 comments: true
