--- a/_posts/2016-11-17-Postdoc-Opportunity-Mixed-Severity-Fire-Rocky-Mountains.Rmd
+++ b/_posts/2016-11-17-Postdoc-Opportunity-Mixed-Severity-Fire-Rocky-Mountains.Rmd
@@ -15,6 +15,16 @@ comments: true
 tags: [Postdoc, position, ad, ecology, fire, modeling, ecological modeling]
 ---
 
+```{r setup, eval=TRUE, echo=FALSE}
+library(knitr)
+knittingToHTML <- opts_knit$get("rmarkdown.pandoc.to")!="latex"
+knittingToPDF <- !knittingToHTML
+```
+
+```{r printinga, eval=knittingToHTML, echo=FALSE,out.extra='style="float:right; margin: 20px; height: 200px; width: 200px"'}
+include_graphics("../img/predictive_ecology_logo.png")
+```
+
 We are seeking a landscape ecologist or ecological modeller to lead the development of a **mixed severity fire regime simulation model** that will permit spatial forecasting of forest structure and composition over the 21st century, and backcasting over the past several centuries. The intended applications are to integrated land and forest management on a multi-use landscape of roughly 1,000,000 ha in the foothills of southern Alberta, Canada. There is also an important historical component through the [Mountain Legacy Project](C:\Eliot\Sync\Students\Ads for students\mountainlegacy.ca). 
  
 The work will be conducted as part of a multidisciplinary team, integrating data from many sources and disciplines e.g. dendrochronological studies, historical fire maps, remote sensed vegetation and forest management data. The model is to be developed in [SpaDES](C:\Eliot\Sync\Students\Ads for students\spades.predictiveecology.org) an R-based system for developing modular, high performance simulation models integrating processes such as vegetation dynamics, natural disturbances,  and forest harvesting.  The project leads are E. McIntire (UBC/CFS), S. Cumming (U Laval), L. Daniels (UBC), Z. Gedalof (U. Guelph), E.S. Higgs (U. Victoria) and D. Andison (UBC).
