fix typos/formatting in blog post

--- a/_posts/2017-09-05-SpaDES-v2.0.0-now-on-CRAN.md
+++ b/_posts/2017-09-05-SpaDES-v2.0.0-now-on-CRAN.md
@@ -11,7 +11,7 @@ tags: [R, SpaDES]
 This is a major update, with several important enhancements and bug fixes.
 
 Most importantly, the package had become so large that we needed to spilt it into several.
-The lastest package version now acts as a metapackage to install the various spinoff packages:
+The latest package version now acts as a metapackage to install the various spinoff packages:
 
 The core simulation components are provided by [`SpaDES.core`](http://spades-core.predictiveecology.org/)), with additonal modelling tools provided by [`SpaDES.tools`](http://spades-tools.predictiveecology.org/)).
 Plotting is provided via [`quickPlot`](http://quickplot.predictiveecology.org/), and simulation caching methods via [`reproducible`](http://reproducible.predictiveecology.org/).
@@ -27,12 +27,12 @@ For a complete list of changes, see [the package's NEWS file](https://raw.github
 
 **Other `SpaDES` ecosystem packages:**
 
-- `quickPlot`: http://quickplot.predictiveecology.org/
-- `reproducible`: http://reproducible.predictiveecology.org/
-- `SpaDES.addins`: http://spades-addins.predictiveecology.org
-- `SpaDES.core`: http://spades-core.predictiveecology.org/
-- `SpaDES.shiny`: http://spades-shiny.predictiveecology.org/
-- `SpaDES.tools`: http://spades-tools.predictiveecology.org/
+- `quickPlot`: [http://quickplot.predictiveecology.org/](http://quickplot.predictiveecology.org/)
+- `reproducible`: [http://reproducible.predictiveecology.org/](http://reproducible.predictiveecology.org/)
+- `SpaDES.addins`: [http://spades-addins.predictiveecology.org](http://spades-addins.predictiveecology.org)
+- `SpaDES.core`: [http://spades-core.predictiveecology.org/](http://spades-core.predictiveecology.org/)
+- `SpaDES.shiny`: [http://spades-shiny.predictiveecology.org/](http://spades-shiny.predictiveecology.org/)
+- `SpaDES.tools`: [http://spades-tools.predictiveecology.org/](http://spades-tools.predictiveecology.org/)
 
 **Predictive Ecology Blog:** [http://predictiveecology.org/](http://predictiveecology.org/)
 
@@ -52,11 +52,11 @@ For a complete list of changes, see [the package's NEWS file](https://raw.github
 
 **Install development libraries:** building packages from source requires the appropriate development libraries for your operating system.
     
-- *Windows:* install [Rtools](https://cran.r-project.org/bin/windows/Rtools/).
+    - *Windows:* install [Rtools](https://cran.r-project.org/bin/windows/Rtools/).
 
-- *macOS:* install Xcode commandline tools from the terminal: `xcode-select install`. 
+    - *macOS:* install Xcode commandline tools from the terminal: `xcode-select install`. 
   
-- *Debian/Ubuntu Linux:* ensure `r-base-dev` is installed.
+    - *Debian/Ubuntu Linux:* ensure `r-base-dev` is installed.
 
 See [here](https://support.rstudio.com/hc/en-us/articles/200486498-Package-Development-Prerequisites) for more details.
 
